pqrs/IaC/rabbit/02-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/part-of: elk-metrics
    app.kubernetes.io/component: queue-broker
    app.kubernetes.io/version: v4.3.0
    app.openshift.io/runtime: rabbitmq
spec:
  serviceName: "rabbitmq-headless"
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
        app.kubernetes.io/name: rabbitmq
        app.kubernetes.io/part-of: elk-metrics
        app.kubernetes.io/component: queue-broker
        app.kubernetes.io/version: v4.3.0
        app.openshift.io/runtime: rabbitmq
    spec:

      containers:
        - name: rabbitmq
          image: rabbitmq:4.3.0-management-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: amqp
              containerPort: 5672
            - name: management
              containerPort: 15672
            - name: prometheus
              containerPort: 15692
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          volumeMounts:
            - name: rabbitmq-storage
              mountPath: /var/lib/rabbitmq

          livenessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - -q
                - ping
            initialDelaySeconds: 60
            timeoutSeconds: 15
            periodSeconds: 30
          readinessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - -q
                - check_port_connectivity
            initialDelaySeconds: 20
            timeoutSeconds: 15
            periodSeconds: 15

  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
