pqrs/IaC/rabbit/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rabbitmq-management
  labels:
    app: rabbitmq
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/part-of: elk-metrics
    app.kubernetes.io/component: queue-broker
spec:
  to:
    kind: Service
    name: rabbitmq
  port:
    targetPort: management
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
